Parser/fannieParserParser.java
// Generated from fannieParser.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class fannieParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, WS=9, 
		MAIN=10, RECIPE=11, TOOL_LIST=12, INGREDIENT_LIST=13, STEP_LIST=14, CONTAIN=15, 
		DO=16, OR=17, DESCRIPTION_STRING=18, START=19, STOP=20, WHEN=21, SERVE=22, 
		CONTENT_IN=23, TRANSFORM=24, TOOL_BASIC_TYPE_IDENTIFIER=25, INGREDIENT_BASIC_TYPE_IDENTIFIER=26, 
		COMPLEX_IDENTIFIER=27, AMOUNT=28, WEIGHT_UNIT=29, ABSTRACT_UNIT=30, TO_TASTE=31, 
		COMMENT=32;
	public static final int
		RULE_program = 0, RULE_mainRecipe = 1, RULE_subRecipe = 2, RULE_recipeBody = 3, 
		RULE_ingredientsList = 4, RULE_ingredientDeclaration = 5, RULE_amountDeclaration = 6, 
		RULE_toolsList = 7, RULE_stepsList = 8, RULE_toolDeclaration = 9, RULE_toolActionDeclaration = 10, 
		RULE_stepDeclaration = 11, RULE_serveStepDeclaration = 12, RULE_doStepDeclaration = 13, 
		RULE_collection = 14, RULE_continousDoStepStartDeclaration = 15, RULE_continousDoStepStopDeclaration = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "mainRecipe", "subRecipe", "recipeBody", "ingredientsList", 
			"ingredientDeclaration", "amountDeclaration", "toolsList", "stepsList", 
			"toolDeclaration", "toolActionDeclaration", "stepDeclaration", "serveStepDeclaration", 
			"doStepDeclaration", "collection", "continousDoStepStartDeclaration", 
			"continousDoStepStopDeclaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "','", "'('", "')'", "'['", "']'", "':'", null, "'main'", 
			"'recipe'", "'tools'", "'ingredients'", "'steps'", "'contain'", "'do'", 
			"'or'", null, "'START'", "'STOP'", "'when'", "'serve'", "'content in'", 
			"'=>'", "'tool'", null, null, null, null, null, "'to-taste'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "WS", "MAIN", "RECIPE", 
			"TOOL_LIST", "INGREDIENT_LIST", "STEP_LIST", "CONTAIN", "DO", "OR", "DESCRIPTION_STRING", 
			"START", "STOP", "WHEN", "SERVE", "CONTENT_IN", "TRANSFORM", "TOOL_BASIC_TYPE_IDENTIFIER", 
			"INGREDIENT_BASIC_TYPE_IDENTIFIER", "COMPLEX_IDENTIFIER", "AMOUNT", "WEIGHT_UNIT", 
			"ABSTRACT_UNIT", "TO_TASTE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "fannieParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public fannieParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public MainRecipeContext mainRecipe() {
			return getRuleContext(MainRecipeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(fannieParserParser.EOF, 0); }
		public List<SubRecipeContext> subRecipe() {
			return getRuleContexts(SubRecipeContext.class);
		}
		public SubRecipeContext subRecipe(int i) {
			return getRuleContext(SubRecipeContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			mainRecipe();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RECIPE) {
				{
				{
				setState(35);
				subRecipe();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainRecipeContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(fannieParserParser.MAIN, 0); }
		public TerminalNode RECIPE() { return getToken(fannieParserParser.RECIPE, 0); }
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public RecipeBodyContext recipeBody() {
			return getRuleContext(RecipeBodyContext.class,0);
		}
		public MainRecipeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainRecipe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterMainRecipe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitMainRecipe(this);
		}
	}

	public final MainRecipeContext mainRecipe() throws RecognitionException {
		MainRecipeContext _localctx = new MainRecipeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainRecipe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(MAIN);
			setState(44);
			match(RECIPE);
			setState(45);
			match(COMPLEX_IDENTIFIER);
			setState(46);
			match(T__0);
			setState(47);
			recipeBody();
			setState(48);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubRecipeContext extends ParserRuleContext {
		public TerminalNode RECIPE() { return getToken(fannieParserParser.RECIPE, 0); }
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public RecipeBodyContext recipeBody() {
			return getRuleContext(RecipeBodyContext.class,0);
		}
		public SubRecipeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subRecipe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterSubRecipe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitSubRecipe(this);
		}
	}

	public final SubRecipeContext subRecipe() throws RecognitionException {
		SubRecipeContext _localctx = new SubRecipeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_subRecipe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(RECIPE);
			setState(51);
			match(COMPLEX_IDENTIFIER);
			setState(52);
			match(T__0);
			setState(53);
			recipeBody();
			setState(54);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecipeBodyContext extends ParserRuleContext {
		public IngredientsListContext ingredientsList() {
			return getRuleContext(IngredientsListContext.class,0);
		}
		public ToolsListContext toolsList() {
			return getRuleContext(ToolsListContext.class,0);
		}
		public StepsListContext stepsList() {
			return getRuleContext(StepsListContext.class,0);
		}
		public RecipeBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recipeBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterRecipeBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitRecipeBody(this);
		}
	}

	public final RecipeBodyContext recipeBody() throws RecognitionException {
		RecipeBodyContext _localctx = new RecipeBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_recipeBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			ingredientsList();
			setState(57);
			match(T__2);
			setState(58);
			toolsList();
			setState(59);
			match(T__2);
			setState(60);
			stepsList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientsListContext extends ParserRuleContext {
		public TerminalNode INGREDIENT_LIST() { return getToken(fannieParserParser.INGREDIENT_LIST, 0); }
		public List<IngredientDeclarationContext> ingredientDeclaration() {
			return getRuleContexts(IngredientDeclarationContext.class);
		}
		public IngredientDeclarationContext ingredientDeclaration(int i) {
			return getRuleContext(IngredientDeclarationContext.class,i);
		}
		public IngredientsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterIngredientsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitIngredientsList(this);
		}
	}

	public final IngredientsListContext ingredientsList() throws RecognitionException {
		IngredientsListContext _localctx = new IngredientsListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ingredientsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(INGREDIENT_LIST);
			setState(63);
			match(T__0);
			setState(64);
			ingredientDeclaration();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(65);
				match(T__2);
				setState(66);
				ingredientDeclaration();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> INGREDIENT_BASIC_TYPE_IDENTIFIER() { return getTokens(fannieParserParser.INGREDIENT_BASIC_TYPE_IDENTIFIER); }
		public TerminalNode INGREDIENT_BASIC_TYPE_IDENTIFIER(int i) {
			return getToken(fannieParserParser.INGREDIENT_BASIC_TYPE_IDENTIFIER, i);
		}
		public List<TerminalNode> COMPLEX_IDENTIFIER() { return getTokens(fannieParserParser.COMPLEX_IDENTIFIER); }
		public TerminalNode COMPLEX_IDENTIFIER(int i) {
			return getToken(fannieParserParser.COMPLEX_IDENTIFIER, i);
		}
		public List<AmountDeclarationContext> amountDeclaration() {
			return getRuleContexts(AmountDeclarationContext.class);
		}
		public AmountDeclarationContext amountDeclaration(int i) {
			return getRuleContext(AmountDeclarationContext.class,i);
		}
		public TerminalNode RECIPE() { return getToken(fannieParserParser.RECIPE, 0); }
		public TerminalNode OR() { return getToken(fannieParserParser.OR, 0); }
		public IngredientDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterIngredientDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitIngredientDeclaration(this);
		}
	}

	public final IngredientDeclarationContext ingredientDeclaration() throws RecognitionException {
		IngredientDeclarationContext _localctx = new IngredientDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ingredientDeclaration);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(INGREDIENT_BASIC_TYPE_IDENTIFIER);
				setState(75);
				match(COMPLEX_IDENTIFIER);
				setState(76);
				amountDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(RECIPE);
				setState(78);
				match(COMPLEX_IDENTIFIER);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(INGREDIENT_BASIC_TYPE_IDENTIFIER);
				setState(80);
				match(COMPLEX_IDENTIFIER);
				setState(81);
				amountDeclaration();
				setState(82);
				match(OR);
				setState(83);
				match(INGREDIENT_BASIC_TYPE_IDENTIFIER);
				setState(84);
				match(COMPLEX_IDENTIFIER);
				setState(85);
				amountDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AmountDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> AMOUNT() { return getTokens(fannieParserParser.AMOUNT); }
		public TerminalNode AMOUNT(int i) {
			return getToken(fannieParserParser.AMOUNT, i);
		}
		public TerminalNode WEIGHT_UNIT() { return getToken(fannieParserParser.WEIGHT_UNIT, 0); }
		public TerminalNode ABSTRACT_UNIT() { return getToken(fannieParserParser.ABSTRACT_UNIT, 0); }
		public TerminalNode TO_TASTE() { return getToken(fannieParserParser.TO_TASTE, 0); }
		public AmountDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_amountDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterAmountDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitAmountDeclaration(this);
		}
	}

	public final AmountDeclarationContext amountDeclaration() throws RecognitionException {
		AmountDeclarationContext _localctx = new AmountDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_amountDeclaration);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(T__3);
				setState(90);
				match(AMOUNT);
				setState(91);
				match(WEIGHT_UNIT);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(92);
					match(T__2);
					setState(93);
					match(AMOUNT);
					setState(94);
					match(ABSTRACT_UNIT);
					}
				}

				setState(97);
				match(T__4);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(T__3);
				setState(99);
				match(TO_TASTE);
				setState(100);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolsListContext extends ParserRuleContext {
		public TerminalNode TOOL_LIST() { return getToken(fannieParserParser.TOOL_LIST, 0); }
		public List<ToolDeclarationContext> toolDeclaration() {
			return getRuleContexts(ToolDeclarationContext.class);
		}
		public ToolDeclarationContext toolDeclaration(int i) {
			return getRuleContext(ToolDeclarationContext.class,i);
		}
		public ToolsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterToolsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitToolsList(this);
		}
	}

	public final ToolsListContext toolsList() throws RecognitionException {
		ToolsListContext _localctx = new ToolsListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_toolsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(TOOL_LIST);
			setState(104);
			match(T__0);
			setState(105);
			toolDeclaration();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(106);
				match(T__2);
				setState(107);
				toolDeclaration();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepsListContext extends ParserRuleContext {
		public TerminalNode STEP_LIST() { return getToken(fannieParserParser.STEP_LIST, 0); }
		public List<StepDeclarationContext> stepDeclaration() {
			return getRuleContexts(StepDeclarationContext.class);
		}
		public StepDeclarationContext stepDeclaration(int i) {
			return getRuleContext(StepDeclarationContext.class,i);
		}
		public StepsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterStepsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitStepsList(this);
		}
	}

	public final StepsListContext stepsList() throws RecognitionException {
		StepsListContext _localctx = new StepsListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stepsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(STEP_LIST);
			setState(116);
			match(T__0);
			setState(117);
			stepDeclaration();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(118);
				match(T__2);
				setState(119);
				stepDeclaration();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolDeclarationContext extends ParserRuleContext {
		public TerminalNode TOOL_BASIC_TYPE_IDENTIFIER() { return getToken(fannieParserParser.TOOL_BASIC_TYPE_IDENTIFIER, 0); }
		public List<TerminalNode> COMPLEX_IDENTIFIER() { return getTokens(fannieParserParser.COMPLEX_IDENTIFIER); }
		public TerminalNode COMPLEX_IDENTIFIER(int i) {
			return getToken(fannieParserParser.COMPLEX_IDENTIFIER, i);
		}
		public List<ToolActionDeclarationContext> toolActionDeclaration() {
			return getRuleContexts(ToolActionDeclarationContext.class);
		}
		public ToolActionDeclarationContext toolActionDeclaration(int i) {
			return getRuleContext(ToolActionDeclarationContext.class,i);
		}
		public ToolDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterToolDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitToolDeclaration(this);
		}
	}

	public final ToolDeclarationContext toolDeclaration() throws RecognitionException {
		ToolDeclarationContext _localctx = new ToolDeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_toolDeclaration);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOOL_BASIC_TYPE_IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(TOOL_BASIC_TYPE_IDENTIFIER);
				setState(128);
				match(COMPLEX_IDENTIFIER);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(129);
					match(T__5);
					setState(130);
					toolActionDeclaration();
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__2) {
						{
						{
						setState(131);
						match(T__2);
						setState(132);
						toolActionDeclaration();
						}
						}
						setState(137);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(138);
					match(T__6);
					}
				}

				}
				break;
			case COMPLEX_IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(COMPLEX_IDENTIFIER);
				setState(143);
				match(COMPLEX_IDENTIFIER);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(144);
					match(T__5);
					setState(145);
					toolActionDeclaration();
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__2) {
						{
						{
						setState(146);
						match(T__2);
						setState(147);
						toolActionDeclaration();
						}
						}
						setState(152);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(153);
					match(T__6);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolActionDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> COMPLEX_IDENTIFIER() { return getTokens(fannieParserParser.COMPLEX_IDENTIFIER); }
		public TerminalNode COMPLEX_IDENTIFIER(int i) {
			return getToken(fannieParserParser.COMPLEX_IDENTIFIER, i);
		}
		public TerminalNode INGREDIENT_BASIC_TYPE_IDENTIFIER() { return getToken(fannieParserParser.INGREDIENT_BASIC_TYPE_IDENTIFIER, 0); }
		public TerminalNode CONTAIN() { return getToken(fannieParserParser.CONTAIN, 0); }
		public AmountDeclarationContext amountDeclaration() {
			return getRuleContext(AmountDeclarationContext.class,0);
		}
		public TerminalNode CONTENT_IN() { return getToken(fannieParserParser.CONTENT_IN, 0); }
		public ToolActionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolActionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterToolActionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitToolActionDeclaration(this);
		}
	}

	public final ToolActionDeclarationContext toolActionDeclaration() throws RecognitionException {
		ToolActionDeclarationContext _localctx = new ToolActionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_toolActionDeclaration);
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				match(COMPLEX_IDENTIFIER);
				setState(160);
				match(T__7);
				setState(161);
				match(INGREDIENT_BASIC_TYPE_IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				match(COMPLEX_IDENTIFIER);
				setState(163);
				match(T__7);
				setState(164);
				match(COMPLEX_IDENTIFIER);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(165);
				match(CONTAIN);
				setState(166);
				match(T__7);
				setState(167);
				match(COMPLEX_IDENTIFIER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(168);
				match(CONTAIN);
				setState(169);
				match(T__7);
				setState(170);
				match(INGREDIENT_BASIC_TYPE_IDENTIFIER);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(171);
				match(CONTAIN);
				setState(172);
				match(T__7);
				setState(173);
				amountDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(174);
				match(COMPLEX_IDENTIFIER);
				setState(175);
				match(T__7);
				setState(176);
				match(CONTENT_IN);
				setState(177);
				match(COMPLEX_IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepDeclarationContext extends ParserRuleContext {
		public DoStepDeclarationContext doStepDeclaration() {
			return getRuleContext(DoStepDeclarationContext.class,0);
		}
		public ContinousDoStepStartDeclarationContext continousDoStepStartDeclaration() {
			return getRuleContext(ContinousDoStepStartDeclarationContext.class,0);
		}
		public ContinousDoStepStopDeclarationContext continousDoStepStopDeclaration() {
			return getRuleContext(ContinousDoStepStopDeclarationContext.class,0);
		}
		public ServeStepDeclarationContext serveStepDeclaration() {
			return getRuleContext(ServeStepDeclarationContext.class,0);
		}
		public StepDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).enterStepDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fannieParserListener ) ((fannieParserListener)listener).exitStepDeclaration(this);
		}
	}
